# inariwatch

./: .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SPONSORSHIP.md  err_gh.txt  github_err.txt  raw.txt  vitest_err.txt  vitest_error.txt  vitest_out.txt
.claude/: settings.local.json
action/: action.yml  package.json  tsconfig.json
capture/: README.md  package-lock.json  package.json
cli/: Cargo.toml
cli/src/: banner.rs  capture_server.rs  config.rs  db.rs  local_fs.rs  main.rs  training_loop_test.rs  url_validation.rs
cli/src/ai/: mod.rs  prompts.rs
cli/src/commands/: add.rs  agent_stats.rs  config_cmd.rs  connect.rs  daemon.rs  dev.rs  feedback.rs  init.rs  logs.rs  mod.rs  postmortem.rs  rollback.rs  serve_mcp.rs  simulate.rs  status.rs  watch.rs
cli/src/integrations/: git_local.rs  github.rs  mod.rs  sentry.rs  vercel.rs
cli/src/mcp/: escalation.rs  fingerprint.rs  mod.rs  post_merge_monitor.rs  progress.rs  safety.rs
cli/src/mcp/tools/: assess_risk.rs  get_build_logs.rs  get_postmortem.rs  get_root_cause.rs  get_status.rs  mod.rs  query_alerts.rs  rollback_vercel.rs  run_check.rs  silence_alert.rs  submit_feedback.rs  trigger_fix.rs
cli/src/notifications/: telegram.rs
cli/src/orchestrator/: correlator.rs  mod.rs
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
vscode/: package-lock.json  package.json
web/: .env.example  .gitignore  middleware.ts  next.config.ts  package.json  (+7 more)
(+336 files in other folders)
