[package]
name = "kairo"
version = "0.1.0"
edition = "2021"
description = "Proactive developer monitoring orchestrator"

[[bin]]
name = "kairo"
path = "src/main.rs"

[dependencies]
clap       = { version = "4",    features = ["derive"] }
tokio      = { version = "1",    features = ["full"] }
reqwest    = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
toml       = "0.8"
rusqlite   = { version = "0.31", features = ["bundled"] }
dirs       = "5"
colored    = "2"
chrono     = { version = "0.4",  features = ["serde"] }
anyhow     = "1"
uuid       = { version = "1",    features = ["v4"] }
dialoguer  = "0.11"
