[package]
name    = "inariwatch-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name       = "inariwatch_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "inariwatch-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                    = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart   = "2"
serde                    = { version = "1", features = ["derive"] }
serde_json               = "1"
tokio                    = { version = "1", features = ["time"] }
reqwest                  = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dirs                     = "5"
toml                     = "0.8"
